style.css
/* html-reset */
/* by using eric meyer's script http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   license: none (public domain)
*/
/* #region */
html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}
/* #endregion */

/* font-loads: */
/* use transfonter (https://transfonter.org/) to convert fonts to woff2 */
/* #region */
@font-face {
  font-family: "Alegreya Sans";
  src: url("/fonts/alegreya-sans_regular.woff2") format("woff2");
  font-style: normal;
  font-weight: 400;
  font-display: block;
}
@font-face {
  font-family: "Alegreya Sans";
  src: url("/fonts/alegreya-sans_italic.woff2") format("woff2");
  font-style: italic;
  font-weight: 400;
  font-display: block;
}
@font-face {
  font-family: "Alegreya Sans";
  src: url("/fonts/alegreya-sans_bold.woff2") format("woff2");
  font-style: normal;
  font-weight: 600;
  font-display: block;
}
@font-face {
  font-family: "Alegreya Sans";
  src: url("/fonts/alegreya-sans_light.woff2") format("woff2");
  font-style: normal;
  font-weight: 300;
  font-display: block;
}
@font-face {
  font-family: "Alegreya Sans";
  src: url("/fonts/alegreya-sans_light-italic.woff2") format("woff2");
  font-style: italic;
  font-weight: 300;
  font-display: block;
}
/* #endregion */

/* global-settings (variables and html-element) */
/* #region */
:root {
  /* colour-variables: */
  --bg: rgb(253, 253, 253);
  --primary: rgb(60, 60, 60);
  --secondary: rgb(120, 120, 120);
  --tertiary: rgb(240, 240, 240);

  /* font-sizes */
/* employing a fluid-typography-scale, the settings of which are here:
https://utopia.fyi/type/calculator?c=320,12,1.2,1920,16,1.2,3,1,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */

  --base-minus-one: clamp(0.625rem, 0.5833rem + 0.2083vw, 0.8333rem);
  --base_size: clamp(0.75rem, 0.7rem + 0.25vw, 1rem);

    /* gallery */
  --no_of_items: 3; 
  --gallery-gap: calc(var(--base_size) * 2);

  /* others: */
  --global_horizontal-margin: 16vw;
}
/* for anything 600px and down (phones, portrait tablets, etc): */
@media (max-width: 768px) { /* phones, portrait */
  :root {
    --global_horizontal-margin: 2vw;
  }
}
@media (min-width: 768px) { /* landscape tablets, small laptops */
  :root {
    --global_horizontal-margin: 8vw;
  }
}
@media (min-width: 1200px) {
  :root {
    --global_horizontal-margin: 16vw; /* big landscape devices  */
  }
}

/* html & body element: */
html {
  font-family: "Alegreya Sans";
  text-transform: lowercase;
  text-wrap: pretty;

  background-color: var(--bg); 
}

body{
  margin: 2vw var(--global_horizontal-margin);
}
/* #endregion */

/* type-styles */
/* #region */
h1 {
  font-family: "Alegreya Sans";
  font-weight: 600;
  font-size: var(--base_size); 
  line-height: 1.2em;
  color: var(--primary);
  margin-bottom: calc(var(--base_size) * -1);
}
p {
  font-family: "Alegreya Sans";
  font-weight: 400;
  font-size: var(--base_size);
  line-height: 1.6em;
  color: var(--primary);
}
em{
  font-style: italic; 
}
h2 {
  font-family: "Alegreya Sans";
  font-weight: 600;
  font-size: var(--base-minus-one); 
  line-height: 1.2em;
}
h3 {
  font-family: "Alegreya Sans";
  font-weight: 300;
  font-size: var(--base-minus-one); 
  line-height: 1.2em;
}
figcaption {
  font-family: "Alegreya Sans";
  font-weight: 400;
  font-size: var(--base-minus-one); 
  line-height: 1.2em;
  color: var(--secondary);
}
cite {
  font-style: italic;
}
blockquote {
  background-color: var(--tertiary);
  padding: 1.2em;
}
blockquote p {
  font-style: italic;
  color: var(--secondary);
  line-height: 1.2em;
}
ol {
  list-style-type: lower-roman;
  padding: 0 1.2em;
}
li {
  font-size: var(--base-minus-one);
  font-style: normal;
  color: var(--secondary);
  line-height: 1.2em;
}
li:not(:last-child) {
  margin-bottom: 0.8em;
}
mark{
  background-color: #fff6d1; 
}

/* links */
a {
  font-size: inherit;
  font-weight: inherit;
  color: inherit;
  text-decoration: underline dashed 0.04em;
  text-underline-offset: 0.2em;
}
a:hover {
  text-decoration: none;
  /* color: var(--primary); */
}
a:active {
  color: var(--primary);
}
a.active{
  text-decoration: none;
  color: var(--primary); 
}

/* #endregion */

/* nav-bar and footer */
/* #region */
nav {
  display: flex;

  justify-content: space-between;
  align-items: center;

  font-family: "Alegreya Sans";
  font-weight: 400;
  font-size: inherit;
  color: var(--secondary);

  width: 100%;
  height: fit-content;
  padding-bottom: calc(var(--base_size) * 1.2);
  border-bottom: 2px solid var(--tertiary);
  margin-bottom: calc(var(--base_size) * 2);
}
nav .right-items {
  display: flex;
  gap: calc(var(--base_size) * 2);
}
footer {
  margin-top: calc(var(--base_size) * 2);
  border-top: 2px solid var(--tertiary);
  display: flex;
  text-align: center;
  justify-content: center;
}
footer p {
  margin-top: calc(var(--base_size) * 0.8);
  font-family: "Alegreya Sans";
  font-weight: 400;
  font-size: var(--base-minus-one);
  line-height: 1.2em;
  color: var(--secondary);
}
/* #endregion */

/* parent containers for media (and other things such as text, figures, image, video, etc) */
/* #region */
.full-width-container {
  display: flex;
  flex-direction: column;
  gap: calc(var(--base_size) * 0.8); 
  width: 100%;
  overflow: hidden;
  margin-top: calc(var(--base_size) * 2);
  box-sizing: border-box; /* box sizing allows you to include padding in the width & height calculation */
}
.full-width-container video {
  margin: 0;
  width: 100%;
  height: auto;
  max-height: calc(100vw * 9 / 16);
  object-fit: cover; 
}
.full-width-container img {
  margin: 0;
  width: 100%;
  height: auto;
  object-fit: cover;
}
.full-width-container iframe {
  margin: 0;
  width: 100%;
  height: calc(90vw * 9 / 18);
  object-fit: contain;
}

.split-width-container {
  /* has a figcaption and a blank container for all images */
  display: flex;
  flex-direction: column; 
  gap: calc(var(--base_size) * 0.8);
  width: 100%;
  overflow: hidden;
  margin-top: calc(var(--base_size) * 2);
}
.split-width-container-contents {
  /* side by side media */
  display: flex;
  gap: calc(var(--base_size) * 2);
  align-items: flex-start; 
  box-sizing: border-box; /* box sizing allows you to include padding in the width & height calculation */
  /* max-height: 30vh;  */
}
#vertically-center {
  align-items: center; 
}
#quarter-width{
width: 50%; 
}
.split-width-container-contents .content{
  display: flex; 
  width: 100%; 
  height: inherit; 
  justify-content: center; 
}
.split-width-container img {
  width: 100%; 
  height: 100%; 
  object-fit: cover;   
}
.split-width-container video {
  margin: 0;
  width: 100%;
  height: auto;
  max-height: calc(100vw * 9 / 16);
  object-fit: cover; 
}

.text-container {
  display: flex;
  flex-direction: column;
  row-gap: calc(var(--base_size) * 1.4);
  margin: 0 var(--global_horizontal-margin) 0 var(--global_horizontal-margin);
}

/* use figure to explain things inside text (such as process, etc) */
figure {
  display: flex;
  flex-direction: column;
  gap: calc(var(--base_size) * 0.8); 
  width: 100%;
  margin-bottom: calc(var(--base_size));
}
figure img {
  width: auto;
  height: auto;
  max-width: 100%;
  object-position: center;
  object-fit: cover;
}
figcaption {
  border-left: calc(var(--base_size)* 0.3) solid var(--secondary);
  padding-left: 0.4em;
}
  #white{
  border: 1.5px solid var(--tertiary); 
  padding: 0.01rem; 
}
/* #endregion */

hr {
  all: unset;
  display: block;
  height: 2px;
  background-color: var(--tertiary);
  margin: 0 var(--global_horizontal-margin) calc(var(--base_size) * 2)  var(--global_horizontal-margin);
}
#separator {
  margin: calc(var(--base_size) * 2) var(--global_horizontal-margin)
}

/* work-page */
header {
  display: flex;
  margin: 0 var(--global_horizontal-margin) 0 var(--global_horizontal-margin);
  align-items: top;
  margin-bottom: calc(var(--base_size) * 1.2);
}
header .left-items {
  width: 100%;
}
header .right-items {
  display: block;
  min-width: fit-content;
  color: var(--secondary);
}
#date {
  color: var(--secondary);
}

/* canvas */
/* #region */
#canvas-container {
  position: inherit;
}
#canvas-replacer {
  display: none;
}
#canvas-container-but-hidden-on-phone {
  position: inherit;
}
@media all and (max-width: 1000px) {
  #canvas-container-but-hidden-on-phone {
    display: none;
  }
  #canvas-replacer {
    display: flex;
  }
}
/* #endregion */

/* gallery*/
/* #region */
.gallery{
  display: flex; 
  flex-direction: row; 
  flex-wrap: wrap; 
  gap: var(--gallery-gap);
  row-gap: calc(var(--gallery-gap) / 2);

  width: 100%;
  height: 100%; 
}
.gallery_item{
display: flex; 
flex-direction: column;
width: calc((100% - (var(--no_of_items) - 1) * var(--gallery-gap)) / var(--no_of_items));
box-sizing: border-box; /* box sizing allows you to include padding in the width & height calculation */
height: 100%; 
text-decoration: none; 
padding: 1em; 
}
.gallery_item:hover{
  background-color: var(--tertiary); 
}
/* for anything 600px and down (phones, portrait tablets, etc): */
@media (max-width: 768px) { /* phones, portrait */
  :root {
    --no_of_items: 2; 
  }
}
@media (min-width: 768px) { /* landscape tablets, small laptops */
  :root {
    --no_of_items: 3;
  }
}
@media (min-width: 1200px) {
  :root {
    --no_of_items: 3;
  }
}

  @media (min-width: 1600px) { /* big laptop */
    :root {
      --no_of_items: 4;
    }
}

.cover-image{
  aspect-ratio: 192 / 108;
  width: 100%; 
  height: 100%; 
  overflow: hidden; 
  justify-content: center; 

  margin-bottom: 0.6em;
}
.cover-image img{
  object-fit: cover; 
  width: 100%;
  height: 100%;
}
 .top{
  display: flex; 
  flex-direction: row; 
  flex-wrap: nowrap; 
  align-items: flex-start;
  justify-content: space-between;
  width: 100%;
}
.top h1{
  display: flex; 
  height: fit-content; 
  width: fit-content; 
  margin-bottom: 0.08em; 
  line-height: var(--base_size); 
}
.top h3{
  display: flex; 
  justify-content: flex-end; 
  height: fit-content; 
  padding-left: 0.2em; 
  width: max-content; 
  line-height: var(--base_size); 
} 
#category{
font-style: italic; 
color: var(--secondary); 
}
.bottom{
  display: flex; 
}
/* #endregion */

/* lander */
.lander{
  display:flex; 
  flex-direction: column; 
  height: 90vh; 
  margin: 0 var(--global_horizontal-margin) 0 var(--global_horizontal-margin);
  align-items: center; 
  justify-content: center; 
}

